--- a/style.css
+++ b/style.css
@@ -125,24 +125,27 @@ body {
     gap: 50px;
     justify-content: space-evenly;
     margin-top: 50px;
+
     
     
     
 
 }
-.layer{
+.layers{
     border: 5px solid green;
     background-color: aqua;
+   
     width: 350px;
     height: 350px;
     border-radius: 50px;
     color: rgb(5, 5, 93);
+    padding-left: 20px;
     
 
 }
-.layer-conent h3{
+ h3{
    
-    font-size: 40px;
+    font-size: 50px;
     text-align: center;
     margin: 20px 0;
     font-style: italic;
